# hoppet

./: .buildinfo  .gitignore  .gitmodules  AUTHORS.md  CHECKLIST  CITATION  CITATION.bib  CITATION.cff  CMakeLists.txt  ChangeLog  ChangeLog-details  INSTALL  LICENSE  Makefile  NEWS  NEWS.md  README  README.md  ReleaseNotes  TODO  api.html  configure  examples.html  genindex.html  git_watcher.cmake  hoppet-config.in  index.html  mkmk  objects.inv  print_banner.sh  py-modindex.html  pyproject.toml  search.html  searchindex.js  tarit.sh  test.sh
examples/: CMakeLists.txt  access-coefficients.cpp  calculate-convolution.cpp  sample-omes.cpp  use-c-interface-from-fortran.f90
examples/cpp/: Makefile  structure_functions_example.cc  tabulation_example.cc  tabulation_example_oo.cc  tabulation_example_qed.cc
examples/cpp/with-lhapdf/: lhapdf_to_hoppet.cc
examples/f77/: .gitignore  Makefile
examples/f90/: README.md  structure_functions_example.default_output  structure_functions_example_exact.default_output  structure_functions_example_flavour.default_output  structure_functions_example_flavour.f90  structure_functions_example_n3lo_tests.f90  tabulation_example_n3lo.default_output  tabulation_example_n3lo.f90  tabulation_example_n3lo_exact.default_output  tabulation_example_qed.f90  tabulation_example_qed_streamlined.default_output  tabulation_example_qed_streamlined.f90  tabulation_example_streamlined.f90  tabulation_example_up_and_down.default_output  tabulation_example_up_and_down.f90
examples/f90/with-lhapdf/: lhapdf_to_hoppet.f90
examples/python/: README.md  lhapdf_to_hoppet.py  structure_functions_example.py  structure_functions_example.py.default_output  tabulation_example.py  tabulation_example.py.default_output  tabulation_example_qed.py  tabulation_example_qed.py.default_output
external-code/libome/: .gitignore  CITATION  CITATION.bib  CMakeLists.txt  README.md  pkg-config.in
external-code/libome/docs/: Doxyfile  main.md
external-code/libome/examples/: calculate-moments.cpp  use-c-interface.c
external-code/libome/src/: CMakeLists.txt
external-code/libome/src/ome/: AQg.h  AQqPS.cpp  AQqPS.h  AQqPSs.cpp  AQqPSs.h  AggQ.cpp  AggQ.h  AgqQ.h  AqgQ.cpp  AqqQNSEven.cpp  AqqQNSEven.h  AqqQNSOdd.h  AqqQPS.cpp  AqqQPS.h  functions.h  integration_engine.h  mellin.h  (+18 more)
external-code/libome/tests/: AQg.test.cpp  AQqPS.test.cpp  AQqPSs.test.cpp  AgqQ.test.cpp  AqqQNSOdd.test.cpp  AqqQPS.test.cpp  CMakeLists.txt  functions.test.cpp  integration_engine_gsl.test.cpp  piecewise.test.cpp  polAQg.test.cpp  polAQqPS.test.cpp  polAggQ.test.cpp  polAgqQ.test.cpp  polAqqQNSEven.test.cpp  polAqqQNSOdd.test.cpp  polAqqQPS.test.cpp  rpd_distribution.test.cpp
pyinterface/: CMakeLists.txt  README.md  __init__.py  hoppet.i  hoppet_lhapdf.py  hoppet_pybind11.cpp  hoppet_v1.i  lhapdf.py  setup.py  structure_function_example.py  tabulation_example.py  tabulation_example_lhapdf.py  test-hoppet-import.py
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  SConstruct  VFNSmod.f  alphas_jrc.f  andim_lo_jrc.f  andim_nlo_jrc.f  assertions.f90  coefficient_functions.f90  coefficient_functions_N3LO.f90  coefficient_functions_holder.f90  coefficient_functions_holder_exact.f90  convolution.f90  couplings.f90  daind_fake.f90  dgauss_jrc.f  dglap_choices.f90  dglap_holders.f90  dglap_objects.F90  dglap_objects.f90  dummy_pdfs.f90  evolinit_jrc.f  evolution.f90  f77_pdftab.f90  f77_pdftab.h  gammax_jrc.f  hoppet.f90  hoppet.h  hoppet_c_f_string_utils.f90  hoppet_cxx_oo.F90  hoppet_cxx_oo.f90  hoppet_lhapdf_interfaces.f90  hoppet_oo.cc  hoppet_oo.h  hoppet_term.f90  hoppet_to_string.f90  hoppet_v1.f90  hoppet_v1.h  (+73 more)
src/config/: hoppet_git_state.f90.in
src/cpp-interface/: cpp_split_fns.F90
src/exact-coefs/: coefficient_functions_holder_exact.f90  hplog5.f  xc2gl3e.f  xc2ns2e.f  xc2ns3e.f  xc2ps3e.f  xc2sg2e.f  xc3ns2e.f  xc3ns3e.f  xcdiff2e.f  xclgl3e.f  xclns2e.f  xclns3e.f  xclsg2e.f
src/hoppet/: base_types.h  fortran_prototypes.h  ostream.h  qcd.h  reg_plus_delta.h  split_fns.h
src/hplog6/: Makefile  README.md  eval1dhplat0.f  eval1dhplat1.f  eval1dhplatinf.f  eval1dhplatm1.f  eval1dhplatminf.f  eval1dhplin1.f  eval1dhplinm1.f  fillh1.f  fillirr1dhplat0.f  fillirr1dhplat1.f  fillirr1dhplatinf.f  fillirr1dhplin1.f  fillred1dhpl.f  fillredhpl2.f  fillredhpl3.f  fillredhpl4.f  fillredhpl5.f  fillredhpl6.f  hplog6.f  printer2.f  printer3.f  printer4.f  setzero.f  subprint.f
src/inc/: extraMacros.inc  ftlMacros.inc  hoppet_config.inc.in  pdf_tabulate.inc  pdf_tabulate_OrderNNN.F90
src/jrc/: evolfactn_jrc.f  matutils_jrc.f  tmc_jrc.f  wcDIS_jrc.f  wcoeff_jrc.f
src/libome/: CMakeLists.txt  hoppet_libome_cxx.cc  hoppet_libome_fortran.f90  hoppet_libome_interface.cc  hoppet_libome_interfaces.f90
src/mass-thresholds/: AQg3mod.f90  AQqPSs3.f  mass_thresholds_n3lo.f90
src/no-exact-coefs/: coefficient_functions_holder_exact.f90
src/ome/: AQg.cpp  AgqQ.cpp  AqgQ.h  AqqQNSOdd.cpp  ome.h  ome_type_aliases.h  polAQg.h  polAQqPS.cpp  polAQqPSs.cpp  polAggQ.cpp  polAqqQNSEven.h  polAqqQPS.h  rpd_distribution.h
src/param-coefs/: xc2ns3p.f  xc2sg3p.f  xc3ns3p.f  xcdiff3p.f  xclns2p.f  xclns3p.f
src/splitting-functions/: xpgg3a.f90  xpgg3a_2410.f90  xpgq3a_2512.f90  xpij2e.f  xpij2n.f90  xpns2e.f  xpns2n.f90  xpns3m_2604_exact.f90  xpns3m_2604_fit.f90  xpns3p_2604_fit.f90  xpns3s.f90  xpns3s_2604_fit.f90  xpps3a.f90  xpqg3a.f90
src/splitting-functions/exact-n3lo-split/: xpns3m_2604_exact.f90  xpns3p_2604_exact.f90  xpns3s_2604_exact.f90
src/splitting-functions/no-exact-n3lo-split/: xpns3m_2604_exact.f90  xpns3p_2604_exact.f90  xpns3s_2604_exact.f90
src/unused/: pdf_table_array.f90
unit-tests/: CMakeLists.txt  README.md  check-thread-safety.cc  gen-alphas-ref.py  hoppet-unit-tests.F90  hoppet-unit-tests.f90  test_alphas.F90  test_alphas.f90  test_convolution.F90  test_convolution.f90  test_convolution_C.cc  test_interpolation.F90  test_libome.F90  test_new_mtm.f90  test_splitfn_limits.F90  timing.inc  unit_tests.f90
unit-tests-cxx/: CMakeLists.txt  unit-test-helpers.h  unit-tests.cc
(+438 files in other folders)
